--- a/adtOO.html
+++ b/adtOO.html
@@ -122,21 +122,23 @@ var JSON = [{'name':"one"}, {'name':"two"},{'name':"three"},{'name':"four"},{'na
 var NOSJ = [{'name':"six"}, {'name':"seven"},{'name':"eight"},{'name':"nine"},{'name':"ten"}];
 
 console.log("goodbye");
+
+for (var c = 0; c < 5; c++) {
     var thirtySeconds = new QuizContent(questions);
-    console.log(thirtySeconds);
+    //console.log(thirtySeconds);
     var topicTally = thirtySeconds.count();
-    console.log(topicTally);
+    //console.log(topicTally);
     var index1 = sortDesc(topicTally).slice(0,5);
-    console.log(index1);
+    //console.log(index1);
     var round1 = thirtySeconds.chooseFive(index1);
-    console.log(round1);
+    //console.log(round1);
     thirtySeconds.remove(round1);
     topicTally = thirtySeconds.count(); // topicTally needs to be triggered everytime a remove is triggered
     var index2 = sortDesc(topicTally).slice(0,5);
     var round2 = thirtySeconds.chooseFive(index2);
     var first = thirtySeconds.presentStatements(round1, JSON);
     // when it is done this way, the JSON array is also changed, may need to use an unset function
-    console.log(first);
+    //console.log(first);
     forEachIn(first, function(k,v){console.log(v.value);}); // print the items from first of interest, i.e. values
 
     var flip = thirtySeconds.presentStatements(round2, NOSJ);
@@ -145,6 +147,7 @@ console.log("goodbye");
 
     topicTally = thirtySeconds.count();
     console.log(topicTally);
+}
   // for (var c = 0; c < 5; c++) {
     // var topicTally = shuffle(count(thirtySeconds));
     // var round1 = sortDesc(topicTally).slice(0,5); // round1 is an array of topic indexes
