--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!-- repurposing and old contact form, will reconcile to app aesthetics at later date -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -19,8 +20,7 @@
 
 <!--CONTACT FORM-->
 <div id="contactform"  class="contact">
-	<form action="send.php" method="post" >
-	
+	<form action="includes/send.php" method="post" >
 		<div id="contactInfo">
     	<p>
     		<label class="smallInput" for="name">Name <span class="required">*</span></label><br />
@@ -30,20 +30,20 @@
     		<label class="smallInput" for="email">Email <span class="required">*</span></label><br />
     		<input type="text" name="email" id="email" value="" class="input round3" /> 
     	</p>
-		
+
     	</div>
     	<p id="emailMessage">
     		<label class="smallInput" for="message">Message <span class="required">*</span></label><br />
     		<textarea name="message" id="message" rows="55" cols="44" class="input round3"></textarea>
     	</p>
-    	
+
     	<input name="subject" id="subject" type="hidden" value="Contact Form Feedback" />
 
     	<input name="repemail" id="repemail" type="hidden" value="projects@stephenfortune.net" />
- 
+
     	<input name="pagelink" id="pagelink" type="hidden" value="#" />
     	<input name="send" id="submit_btn" type="submit" class="round3 clearRight" value="Send Message" />
-    	
+
     	<p id="required"><span class="required">*</span> <em>= Required field</em></p>
     </form>
 </div><!--end contact form-->
